# receipt2budget-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  receipt_reader.py
