[project]
name = "receipt2budget-bot"
version = "0.1.0"
description = "Telegram bot that processes receipt photos using OCR and LLM, and create transaction in Actual Budget"
requires-python = ">=3.12"
dependencies = [
    "python-doctr>=0.6.0",
    "llama-cpp-python==0.3.4",
    "aiogram==3.21.0",
    "pillow==11.3.0",
    "markupsafe<3",
    "actualpy==0.13.0",
    "pydantic-settings==2.10.1",
    "opencv-python==4.11.0.86",
]

[tool.uv]
dev-dependencies = [
    "black==25.1.0"
]
